| Summary: | ASTERISK-29472: res_pjsip: OLI/ANI2 support missing | ||||
| Reporter: | N A (InterLinked) | Labels: | |||
| Date Opened: | 2021-06-08 15:42:01 | Date Closed: | 2021-09-15 10:07:19 | ||
| Priority: | Minor | Regression? | |||
| Status: | Closed/Complete | Components: | Channels/chan_pjsip Resources/res_pjsip_caller_id | ||
| Versions: | 18.4.0 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | PJSIP is missing OLI/ANI2 parsing as chan_sip had, as well as the ability to write this into the From header on an outgoing call, as is required for SS7/ISDN integration via SIP. | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2021-06-08 15:42:02.077-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Joshua C. Colp (jcolp) 2021-06-08 15:47:41.942-0500 Assigning to you, as you are working on this, once done comment and this will go back into triage. By: Friendly Automation (friendly-automation) 2021-09-15 10:07:20.811-0500 Change 16477 merged by Friendly Automation: res_pjsip_caller_id: Add ANI2/OLI parsing [https://gerrit.asterisk.org/c/asterisk/+/16477|https://gerrit.asterisk.org/c/asterisk/+/16477] By: Friendly Automation (friendly-automation) 2021-09-15 10:08:23.897-0500 Change 16119 merged by Friendly Automation: res_pjsip_caller_id: Add ANI2/OLI parsing [https://gerrit.asterisk.org/c/asterisk/+/16119|https://gerrit.asterisk.org/c/asterisk/+/16119] By: Friendly Automation (friendly-automation) 2021-09-15 10:27:31.560-0500 Change 16120 merged by Kevin Harwell: res_pjsip_caller_id: Add ANI2/OLI parsing [https://gerrit.asterisk.org/c/asterisk/+/16120|https://gerrit.asterisk.org/c/asterisk/+/16120] By: Friendly Automation (friendly-automation) 2021-09-15 10:27:41.935-0500 Change 16041 merged by Kevin Harwell: res_pjsip_caller_id: Add ANI2/OLI parsing [https://gerrit.asterisk.org/c/asterisk/+/16041|https://gerrit.asterisk.org/c/asterisk/+/16041] | ||||